src/Services/Proxy/deploy/deployment-microservice-proxy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy
  namespace: default
  labels:
    app: proxy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      labels:
        app: proxy
    spec:
      containers:
      - name: proxy
        image: siccardev.azurecr.io/proxy:latest
        resources:
          limits:
            memory: "64Mi"
            cpu: "200m"          
        ports:
        - containerPort: 80
        imagePullPolicy: Always
