src/Services/Proxy/deploy/ingress-microservice-proxy.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxy-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: proxy-ingress
spec:
  rules:
    # The host value is from the http_application_routing add on
  - host: dc4931334e134cb6add7.uksouth.aksapp.io
    http:
      paths:
      - pathType: Prefix
        path: "/"   #note: NOT 'peers' like the other services
        backend:
          service:
            name: proxy
            port: 
              number: 80
